# Halifax-bar-sentiment

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  config.py  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml  env.example  extract.py  load.py  main.py  pyproject.toml  pytest.ini  requirements.txt  sentiment.py  transform.py
alembic/: env.py
docker/: Dockerfile.api  Dockerfile.dashboard  nginx.conf
docs/: API_DOCUMENTATION.md  DEPLOYMENT.md
src/: __init__.py
src/core/: config.py  constants.py
src/dashboard/: package-lock.json  package.json
src/dashboard/public/: index.html
src/dashboard/src/: App.tsx
src/dashboard/src/components/: Analytics.tsx  BarDetail.tsx  BarList.tsx  Dashboard.tsx  DataQuality.tsx  Navbar.tsx
src/dashboard/src/services/: api.ts
src/dashboard/src/types/: api.ts
src/models/: api.py  sentiment.py  validation.py
src/services/: database.py  enhanced_load.py  extract.py  load.py  transform.py
src/utils/: logging.py
tests/integration/: test_pipeline.py
tests/unit/: test_api.py  test_sentiment.py  test_validation.py
